k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excelsi
  annotations:
    # argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/acme-challenge-type: http01
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: excelsi-dev.xgeeks.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: excelsi
                port:
                  number: 3000
  tls:
    - hosts:
        - excelsi-dev.xgeeks.tech
      secretName: excelsi-dev.xgeeks.tech-tls # will be auto created
